# pprof-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/memory/: Cargo.toml  build.rs
crates/memory/src/: lib.rs  profiler.rs  report.rs
crates/memory/src/helper/: helper.cpp  mod.rs
crates/memory/src/proto/: mod.rs
crates/memory/tests/: profiler_test.rs
crates/pprof/: Cargo.toml  build.rs
crates/pprof/src/proto/: gperf.rs
