[package]
description = "A memory profile data collector for pprof"
documentation = "https://docs.rs/hala-pprof-memory"
edition.workspace = true
license = "MIT"
name = "hala-pprof-memory"
repository = "https://github.com/HalaOS/pprof-rs.git"
version.workspace = true
readme = "../../README.md"

[dependencies]
leveldb-sys = { workspace = true, optional = true }
backtrace = { workspace = true, optional = true }
serde = { workspace = true }
bson = { workspace = true, optional = true }

[build-dependencies]
cc = { workspace = true }

[features]
default = ["alloc"]
alloc = ["bson", "backtrace", "leveldb-sys"]
