[package]
description = "A memory profile data collector for pprof"
documentation = "https://docs.rs/hala-pprof-memory"
edition.workspace = true
license = "MIT"
name = "hala-pprof-memory"
repository = "https://github.com/HalaOS/pprof-rs.git"
version.workspace = true
readme = "../../README.md"

[dependencies]
backtrace = { workspace = true }
serde = { workspace = true }
protobuf = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[build-dependencies]
cc = { workspace = true }
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }

[features]
default = ["report"]
report = ["protobuf", "chrono"]
